# discord-ollamabot-local

./: .gitignore  Dockerfile  Modelfile.example  README.md  env.example  ollamabot.py  pyproject.toml
